style(container): add an icon container to prevent icon overflow

--- a/src/components/layout/container.css
+++ b/src/components/layout/container.css
@@ -26,6 +26,14 @@
   top: calc(100% - 1px);
   z-index: 10;
 }
+.container__icons-container{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  top:0;
+  left:0;
+}
 .container__icons::before {
   width: 100%;
   height: 336px;
